--- a/index.html
+++ b/index.html
@@ -3,12 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <main>
     <section class="calculator">
+        <div class="screen">
+        <p id="display">0</p>
+        </div>
+        <br>
+        <div class="buttons">
+            <div id="operations" class="operations">
+            <button id="add" onclick="add()">+</button>
+            <button id="subtract" onclick="subtract()">-</button>
+            <button id="multiply" onclick="multiply()">x</button>
+            <button id="divide" onclick="divide()">/</button>
+            </div>
+            <br>
+            <div class="digits" id="sevenDigits">
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+            </div>
+            <br>
+            <div class="digits" id="fourDigits">
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            </div>
+            <br>
+            <div class="digits" id="oneDigits">
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            </div>
+        </div>
+            <br>
+            <button id="equal">=</button>
 
     </section>
 </main>
