--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 <main>
     <section class="calculator">
-        <div class="screen">
-        <p id="display">0</p>
+        <div class="calculator-display">
+            <div class="previous-operand"></div>
+            <div class="current-operand">0</div>
         </div>
         <br>
         <div class="buttons">
             <div id="operations" class="operations">
-            <button id="add" onclick="add()">+</button>
-            <button id="subtract" onclick="subtract()">-</button>
-            <button id="multiply" onclick="multiply()">x</button>
-            <button id="divide" onclick="divide()">/</button>
+            <button id="add">+</button>
+            <button id="subtract">-</button>
+            <button id="multiply">x</button>
+            <button id="divide">/</button>
             </div>
             <br>
             <div class="digits" id="sevenDigits">
