--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <section class="calculator">
         <div class="calculator-display">
             <div class="previous-operand"></div>
-            <div class="current-operand">0</div>
+            <div class="current-operand"></div>
         </div>
         <br>
         <div class="buttons">
             <div id="operations" class="operations">
             <button id="add">+</button>
             <button id="subtract">-</button>
-            <button id="multiply">x</button>
+            <button id="multiply">*</button>
             <button id="divide">/</button>
             </div>
             <br>
@@ -42,6 +42,7 @@
         </div>
             <br>
             <button id="equal">=</button>
+            <button id="clear" onclick="clearText()">clear</button>
 
     </section>
 </main>
