--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
             <div class="current-operand"></div>
         </div>
         <br>
-        <div class="buttons">
+        <div>
             <div id="operations" class="operations">
-            <button id="add">+</button>
-            <button id="subtract">-</button>
-            <button id="multiply">*</button>
-            <button id="divide">/</button>
+            <button class="buttons" id="add" data-value="+">+</button>
+            <button class="buttons" id="subtract" data-value="">-</button>
+            <button class="buttons" id="multiply" data-value="">*</button>
+            <button class="buttons" id="divide" data-value="">/</button>
             </div>
             <br>
             <div class="digits" id="sevenDigits">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
+                <button class="buttons" id="seven" data-value="">7</button>
+                <button class="buttons" id="eight" data-value="">8</button>
+                <button class="buttons" id="nine" data-value="">9</button>
             </div>
             <br>
             <div class="digits" id="fourDigits">
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
+            <button class="buttons" id="four" data-value="">4</button>
+            <button class="buttons" id="five" data-value="">5</button>
+            <button class="buttons" id="six" data-value="">6</button>
             </div>
             <br>
             <div class="digits" id="oneDigits">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
+            <button class="buttons" id="one" data-value="">1</button>
+            <button class="buttons" id="two" data-value="">2</button>
+            <button class="buttons" id="three" data-value="">3</button>
             </div>
         </div>
             <br>
-            <button id="equal">=</button>
-            <button id="clear" onclick="clearText()">clear</button>
+            <button class="buttons" id="equal" data-value="">=</button>
+            <button class="buttons" id="clear" onclick="clearText()">clear</button>
 
     </section>
 </main>
