--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <br>
         <div>
             <div id="operations" class="operations">
-            <button class="buttons" id="add" data-value="+">+</button>
-            <button class="buttons" id="subtract" data-value="-">-</button>
-            <button class="buttons" id="multiply" data-value="*">*</button>
-            <button class="buttons" id="divide" data-value="/">/</button>
+                <button class="buttons" id="add" data-value="+">+</button>
+                <button class="buttons" id="subtract" data-value="-">-</button>
+                <button class="buttons" id="multiply" data-value="*">*</button>
+                <button class="buttons" id="divide" data-value="/">/</button>
             </div>
             <br>
             <div class="digits" id="sevenDigits">
@@ -29,22 +29,27 @@
             </div>
             <br>
             <div class="digits" id="fourDigits">
-            <button class="buttons" id="four" data-value="4">4</button>
-            <button class="buttons" id="five" data-value="5">5</button>
-            <button class="buttons" id="six" data-value="6">6</button>
+                <button class="buttons" id="four" data-value="4">4</button>
+                <button class="buttons" id="five" data-value="5">5</button>
+                <button class="buttons" id="six" data-value="6">6</button>
             </div>
             <br>
             <div class="digits" id="oneDigits">
-            <button class="buttons" id="one" data-value="1">1</button>
-            <button class="buttons" id="two" data-value="2">2</button>
-            <button class="buttons" id="three" data-value="3">3</button>
+                <button class="buttons" id="one" data-value="1">1</button>
+                <button class="buttons" id="two" data-value="2">2</button>
+                <button class="buttons" id="three" data-value="3">3</button>
             </div>
         </div>
-            <br>
+        <br>
+        <div class="bottom-buttons">
+            <button class="buttons" id="backspace" data-value="backspace">⌫</button>
             <button class="buttons" id="zero" data-value="0">0</button>
+        </div>
+        <br>
+        <div class="last-buttons">
             <button class="buttons" id="equal" data-value="=">=</button>
             <button class="buttons" id="clear" data-value="C">Cls</button>
-
+        </div>
     </section>
 </main>
 
