Added decimal button and functionality to use it

--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         </div>
         <br>
         <div class="bottom-buttons">
-            <button class="buttons" id="backspace" data-value="backspace">⌫</button>
+            <button class="buttons" id="decimal" data-value=".">.</button>
             <button class="buttons" id="zero" data-value="0">0</button>
+            <button class="buttons" id="equal" data-value="=">=</button>
         </div>
         <br>
         <div class="last-buttons">
-            <button class="buttons" id="equal" data-value="=">=</button>
+            <button class="buttons" id="backspace" data-value="backspace">⌫</button>
             <button class="buttons" id="clear" data-value="C">Cls</button>
         </div>
     </section>
